# Claude-hop

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  claude-hop.py  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  setup.sh
e2e/: Dockerfile  docker-compose.yml  run.sh
src/claude_hop/: __init__.py  banner.py  cli.py  config.py  doctor.py  projects.py  remap.py  sync.py  transport.py  upgrade.py
tests/: conftest.py  test_banner.py  test_cli.py  test_config.py  test_doctor.py  test_encode.py  test_integration.py  test_mapper.py  test_projects.py  test_remap_tree.py  test_remotes_cli.py  test_select.py  test_transport.py  test_upgrade.py
