[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-hop"
version = "0.4.0"
description = "Sync Claude Code sessions between two machines over SSH — no cloud."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Vasileios Papadimitriou" }]
keywords = ["claude", "claude-code", "sync", "ssh", "rsync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Repository = "https://github.com/SeiduTakizawa/Claude-hop"
Issues = "https://github.com/SeiduTakizawa/Claude-hop/issues"
Changelog = "https://github.com/SeiduTakizawa/Claude-hop/blob/main/CHANGELOG.md"

[project.scripts]
claude-hop = "claude_hop.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_hop"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["claude-hop.py"]  # the original prototype, kept for reference

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# typer's idiom is Option()/Argument() calls in parameter defaults
"src/claude_hop/cli.py" = ["B008"]
